[gd_scene load_steps=8 format=2]

[ext_resource path="res://2d/assets/themes/transparent.tres" type="Theme" id=1]
[ext_resource path="res://2d/source/scripts/runes/rune_help.gd" type="Script" id=2]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_right.png" type="Texture" id=3]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_left.png" type="Texture" id=4]
[ext_resource path="res://2d/assets/themes/transparent-child.tres" type="Theme" id=5]
[ext_resource path="res://bundles/assets/images/magic/minor_healing.png" type="Texture" id=6]
[ext_resource path="res://2d/source/scenes/scene_header.tscn" type="PackedScene" id=7]

[node name="node" type="Node2D" groups=["rune_help"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 126.0 ]
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 5 )

[node name="PanelHelp" type="Panel" parent="Panel"]
margin_left = 160.0
margin_top = 127.0
margin_right = 864.0
margin_bottom = 511.0
theme = ExtResource( 1 )

[node name="Label" type="RichTextLabel" parent="Panel/PanelHelp"]
process_priority = 1
margin_top = -3.0
margin_right = 700.0
margin_bottom = 417.0
theme = ExtResource( 1 )
bbcode_enabled = true

[node name="Label2" type="RichTextLabel" parent="Panel/PanelHelp"]
process_priority = 1
margin_left = 352.0
margin_top = -3.0
margin_right = 1052.0
margin_bottom = 417.0
theme = ExtResource( 1 )
bbcode_enabled = true

[node name="Abbreviation" type="RichTextLabel" parent="Panel/PanelHelp"]
margin_left = 489.0
margin_top = -6.0
margin_right = 721.0
margin_bottom = 93.0
theme = ExtResource( 1 )
bbcode_enabled = true

[node name="ArrowLeft" type="TextureRect" parent="Panel"]
margin_left = 180.0
margin_top = 145.0
margin_right = 220.0
margin_bottom = 185.0
focus_mode = 2
texture = ExtResource( 4 )

[node name="ArrowRight" type="TextureRect" parent="Panel"]
margin_left = 215.0
margin_top = 145.0
margin_right = 255.0
margin_bottom = 185.0
focus_mode = 2
texture = ExtResource( 3 )

[node name="RuneNumber" type="RichTextLabel" parent="Panel"]
margin_left = 253.0
margin_top = 149.0
margin_right = 322.0
margin_bottom = 212.0
theme = ExtResource( 1 )
bbcode_enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="RuneImage" type="Sprite" parent="Panel"]
position = Vector2( 343, 162 )
z_index = 4096
texture = ExtResource( 6 )

[node name="SceneHeader" parent="." instance=ExtResource( 7 )]

[node name="Label" parent="SceneHeader" index="1"]
text = ""

[connection signal="focus_entered" from="Panel/ArrowLeft" to="." method="_on_ArrowLeft_focus_entered"]
[connection signal="focus_exited" from="Panel/ArrowLeft" to="." method="_on_ArrowLeft_focus_exited"]
[connection signal="gui_input" from="Panel/ArrowLeft" to="." method="_on_Arrow_left_data_input"]
[connection signal="focus_entered" from="Panel/ArrowRight" to="." method="_on_ArrowRight_focus_entered"]
[connection signal="focus_exited" from="Panel/ArrowRight" to="." method="_on_ArrowRight_focus_exited"]
[connection signal="gui_input" from="Panel/ArrowRight" to="." method="_on_Arrow_right_data_input"]
[connection signal="pressed" from="SceneHeader/ButtonExit" to="." method="_on_ButtonExit_pressed"]

[editable path="SceneHeader"]
